--- a/truesight/index.html
+++ b/truesight/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-tsrouter-app"
+      content="Check if your videos are ai-generated or not with TrueSight"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - TrueSight</title>
+    <title>TrueSight - AI Video Detection</title>
   </head>
   <body>
     <div id="app"></div>
